--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta property="og:title" content=".Contract Domains" />
+  <meta property="og:title" content=".lilnode domains" />
   <meta property="og:image" content="/preview.png" />
-  <title>.Contract Domains</title>
+  <title>.lilnode Domains</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
 </head>
@@ -17,18 +17,18 @@
   
   <script src="script.js"></script>
 
-  <div class="title">.CONTRACT DOMAINS</div>
+  <div class="title">.lilnode Domains</div>
   <div class="subtitle">Decentralized domains on Ethereum</div>
   <div class="subtitle">in a decentralized root zone</div>
   <div class="subtitle">on Handshake</div>
   <div class="search">
   <input type="text" class="searchbox"  placeholder="Enter domain" value="" onKeyDown="handleKeyDown()" ></input> 
-  <div class="subtitle green">.contract</div>
+  <div class="subtitle green">.lilnode</div>
   </div>
 
    <div class="wrap-collabsible">
     <input id="collapsible" class="toggle" type="checkbox">
-    <label for="collapsible" class="lbl-toggle">How to access .contract sites</label>
+    <label for="collapsible" class="lbl-toggle">How to access .lilnode sites</label>
     <div class="collapsible-content">
       <div class="content-inner">
           <div>
@@ -43,7 +43,7 @@
 
    <div class="wrap-collabsible">
     <input id="collapsible2" class="toggle" type="checkbox">
-    <label for="collapsible2" class="lbl-toggle">How to set up .contract sites</label>
+    <label for="collapsible2" class="lbl-toggle">How to set up .lilnode sites</label>
     <div class="collapsible-content">
       <div class="content-inner">
           <div>
@@ -62,7 +62,7 @@
     </div>
 
  <div class="footer">
-    Website by <a href="https://theshake.xyz/">The Shake</a>
+    Website Opensourced by <a href="https://theshake.xyz/">The Shake</a>
   </div>
 
 </body>
